--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ a:disabled {cursor:wait !important;}
 .ApproveBTN {display: inline-block; padding: 8px 17px; background-color: #bd84fb; color: #ffffff; border-radius: 20px; font-size: 16px; font-weight: bold; cursor: pointer;}
 .ApproveBTN:hover {color: #ffffff; text-decoration: none;}
 .ApproveBTN:disabled {font-weight: normal;}
-.Web3ActionBTN {display: inline-block; padding: 8px 17px; background-color: #7474f7; color: #ffffff; border-radius: 20px; font-size: 16px; font-weight: bold; cursor: pointer;}
+.Web3ActionBTN {display: inline-block; padding: 8px 17px; background-color: #7474f7; color: #ffffff; border-radius: 20px; font-size: 13px; font-weight: bold; cursor: pointer;}
 .Web3ActionBTN:hover {color: #ffffff; text-decoration: none;}
 .Web3ActionBTN:disabled {font-weight: normal !important;}
 .Rebalance {width: 100%; display: inline-block; text-align: center;}
@@ -434,11 +434,12 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .ActionButtonV1 .web2ActionBTN {display: inline-block; text-align: center;}
 .ActionButtonV1 .backActionBTN {display: inline-block; text-align: center;}
 .FARMV1FancyThings {background-color: #e9effc; border: 1px solid #e0e2e6; border-radius: 12px; padding: 5px 8px;}
-.V1TokenLP {width: 100%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe;}
-.penguin .V1TokenLP {background-color: #2f3044; border-color: #1c1c27 !important;}
-.V1TokenLP .LockedFarmTokensPosition {text-align: left; font-size: 12px; width: 45%; margin-right: 1%;}
+.V1TokenLP {width: 100%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe; margin: 10px auto;}
+.penguin .V1TokenLP {background-color: rgb(33, 36, 41); border-color: #1c1c27 !important;}
+.V1TokenLP .LockedFarmTokensPosition {text-align: left; font-size: 12px; display: inline-block; width: 45%; margin-left: 1%; margin-right: 1%;}
 .V1TokenLP .LockedFarmTokensPosition p {font-size: 12px;}
-.QuestionRegularFarmTokenRem {}
+.QuestionRegularFarmTokenRem {display: inline-block; width: 50%;text-align: right;margin-left: 1%;}
+.QuestionRegularFarmTokenRem .PrestoSelector {border: none;}
 
 .PrestoSelector {padding: 5px; margin: 2px 3px; border-radius: 8px; border: 1px solid #9e6915;}
 .PrestoSelector span {font-size: 14px; margin: auto 5px auto auto; display: inline-block; vertical-align: middle;}
