--- a/src/index.css
+++ b/src/index.css
@@ -440,8 +440,12 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .V1TokenLP .LockedFarmTokensPosition p {font-size: 12px;}
 .QuestionRegularFarmTokenRem {display: inline-block; width: 50%;text-align: right;margin-left: 1%;vertical-align: middle;}
 .QuestionRegularFarmTokenRem .PrestoSelector {border: none;}
-.PositionInfoFarmingBigMoney {width: 100%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
+.PositionInfoFarmingBigMoney {width: 100%; display: inline-block; padding: 20px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
 .penguin .PositionInfoFarmingBigMoney  {background-color: rgb(33, 36, 41); border-color: #1c1c27 !important;}
+.FarmYouFARMFARMFARM p {font-size: 12px;}
+.FarmYouFARMFARMFARM a {margin: 5px;}
+.web2ActionBTNGigi {background-color: #849BBD; border-color: #849BBD;}
+.Farmed p {font-size: 12px;}
 
 
 .PrestoSelector {padding: 5px; margin: 2px 3px; border-radius: 8px; border: 1px solid #9e6915;}
