--- a/src/index.css
+++ b/src/index.css
@@ -428,26 +428,26 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .magic .BLKEMD {color: #000000 !important;}
 .InputRegularB .form-control, .InputRegularB .form-control:focus {border-right: 1px solid #9e6915;}
 
-.FarmSetup {border: 1px solid #e0e2e6;border-radius: 15px; background-color: #f7fafe;margin: 15px auto; padding: 3% 3% 1% 3%;}
+.FarmSetup {border: 1px solid #e0e2e6 !important;;border-radius: 15px; background-color: #f7fafe;margin: 15px auto; padding: 3% 3% 1% 3%;}
 .penguin .FarmSetup {background-color: #2f3044; border-color: #1c1c27 !important;border-radius: 15px; margin: 15px auto;}
 .ActionButtonV1 {text-align: center; width: 60%; margin: 5px auto; display: block;}
 .ActionButtonV1 .web2ActionBTN {display: inline-block; text-align: center;}
 .ActionButtonV1 .backActionBTN {display: inline-block; text-align: center;}
-.FARMV1FancyThings {background-color: #e9effc; border: 1px solid #e0e2e6; border-radius: 12px; padding: 5px 8px;}
-.V1TokenLP {width: 100%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
+.FARMV1FancyThings {background-color: #e9effc; border: 1px solid #e0e2e6 !important;; border-radius: 12px; padding: 5px 8px;}
+.V1TokenLP {width: 100%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6 !important;;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
 .penguin .V1TokenLP {background-color: rgb(33, 36, 41); border-color: #1c1c27 !important;}
 .V1TokenLP .LockedFarmTokensPosition {text-align: left; font-size: 12px; display: inline-block; width: 45%; margin-left: 1%; margin-right: 1%;vertical-align: middle;}
 .V1TokenLP .LockedFarmTokensPosition p {font-size: 12px;}
 .QuestionRegularFarmTokenRem {display: inline-block; width: 50%;text-align: right;margin-left: 1%;vertical-align: middle;}
 .QuestionRegularFarmTokenRem .PrestoSelector {border: none;}
-.PositionInfoFarmingBigMoney {width: 100%; display: inline-block; padding: 20px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
+.PositionInfoFarmingBigMoney {width: 100%; display: inline-block; padding: 20px; border: 1px solid #e0e2e6 !important;;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
 .penguin .PositionInfoFarmingBigMoney  {background-color: rgb(33, 36, 41); border-color: #1c1c27 !important;}
 .FarmYouFARMFARMFARM p {font-size: 12px;}
 .FarmYouFARMFARMFARM a {margin: 5px;}
 .web2ActionBTNGigi {background-color: #849BBD; border-color: #849BBD;}
 .YourFarmingPositionsFarmingFarmingFarmingChiFarmaViveComeUnPAsha .Farmed p {width: 90%;}
 .Farmed p {font-size: 12px;}
-.YourFarmingPositionsFarmingFarmingFarmingChiFarmaViveComeUnPAsha {width: 92%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
+.YourFarmingPositionsFarmingFarmingFarmingChiFarmaViveComeUnPAsha {width: 92%; display: inline-block; padding: 10px; border: 1px solid #e0e2e6 !important;;border-radius: 15px; background-color: #e9effc; margin: 10px auto;}
 .penguin .YourFarmingPositionsFarmingFarmingFarmingChiFarmaViveComeUnPAsha {background-color: rgb(33, 36, 41); border-color: #1c1c27 !important;}
 .YouEanBigMoney p {font-size: 11px;}
 
