--- a/src/index.css
+++ b/src/index.css
@@ -718,6 +718,8 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
    .farmInfoCurve {display: none !important;}
    .SetupFarmingInstructionsV3 {width: 100%;}
    .DeleteMRD {margin: 0px 9px;}
+   .TokenFarmV3InfoBox {width: 48%;display: inline-block;}
+   .farmInfoCurve {width: 100% !important;}
 }
 
 @media only screen and (min-device-width: 751px) and (max-device-width: 1024px) {
