--- a/src/index.css
+++ b/src/index.css
@@ -563,6 +563,7 @@ input[type=range] {height: 31px;-webkit-appearance: none;margin: 10px 0;width: 1
 .input-group-append {background-color: #e9effc;}
 .penguin .input-group-append {background-color: #2f3044;}
 .generationSelector {width: 45%; display: inline-block; margin: 10px 1%; padding: 30px; background-color: #f7fafe; border: 1px solid #e0e2e6; border-radius: 12px;}
+.generationSelectorB {width: 92%;}
 .penguin .generationSelector {background-color: #2f3044;border-color: #1c1c27}
 .generationSelector h6, .FancyExplanationCreate h6 {font-size: 16px; font-weight: bold;}
 .generationSelector p, .FancyExplanationCreate p {font-size: 11px;}
